2010-02-12  Alan McGovern  <amcgovern@novell.com>

	* ItemContainerGenerator.cs: braindeadness strikes - i should
	  be checking 'item' not 'f'. Thanks fejj

2010-02-12  Alan McGovern  <amcgovern@novell.com>

	* ItemContainerGenerator.cs: Revert the change to DataContext
	  as we break horribly with this. We can fix later.

2010-02-12  Alan McGovern  <amcgovern@novell.com>

	* ItemContainerGenerator.cs: Fix a few bugs in
	  ItemContainerGenerator and add test cases for the fixes.
	  This resolves most of the big bugs we have with
	  VirtualizingPanel and fixes the non-fullscreen
	  recommendations page in Olympics.

2010-02-11  Jeffrey Stedfast  <fejj@novell.com>

	* VirtualizingStackPanel.cs (RemoveUnusedContainers): Don't remove
	the child if the event was cancelled.

	* ItemContainerGenerator.cs (GenerateNext): Need to advance the
	position even if the item is already realized. Also need to set
	the proper isNewlyRealized value.

2010-02-11  Alan McGovern  <amcgovern@novell.com>

	* VirtualizingStackPanel.cs: Add a bunch of fixes for
	  VirtualizingStackPanel so it renders better.

2010-02-11  Alan McGovern  <amcgovern@novell.com>

	* VirtualizingPanel.cs: When we get a Reset from the
	  ItemContainerGenerator we need to clear the children and
	  call OnClearChildren before invoking OnItemsChanged.

	* Control.cs: Move 'ApplyTemplate' to FrameworkElement instead
	  of Control as i need to call it for ScrollContentPresenter.

2010-02-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* OpenFileDialog.cs: use g_free instead of Marshal.FreeHGlobal.

2010-02-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* VirtualizingStackPanel.cs: Fix compiler warning.

2010-02-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* TextBox.cs:
	* Control.cs:
	* PasswordBox.cs:
	* ContentControl.cs:
	* ItemContainerGenerator.cs:
	* VirtualizingStackPanel.cs: Fix compiler warnings.

2010-02-05  Jeffrey Stedfast  <fejj@novell.com>

	* VirtualizingStackPanel.cs (MeasureOverride): As a temporary