@@ -1,3 +1,11 @@
+2010-02-15  Alan McGovern  <amcgovern@novell.com>
+
+	* ItemContainerGenerator.cs: We no longer need to shuffle
+	  items when we replace something in the collection, but we do
+	  need to shuffle them when we remove one. This fixes some
+	  regressions from my last round of ItemContainerGenerator
+	  fixes.
+
 2010-02-12  Alan McGovern  <amcgovern@novell.com>
 
 	* ItemContainerGenerator.cs: braindeadness strikes - i should
